--- a/MyBlog.Services/MyBlog.Services.csproj
+++ b/MyBlog.Services/MyBlog.Services.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MyBlog.Core\MyBlog.Core.csproj" />
     <ProjectReference Include="..\MyBlog.DBContext\MyBlog.DBContext.csproj" />
     <ProjectReference Include="..\MyBlog.Models\MyBlog.Models.csproj" />
   </ItemGroup>
