--- a/MyBlogWeb/NLogLinux.config
+++ b/MyBlogWeb/NLogLinux.config
@@ -13,7 +13,7 @@
 	<!-- the targets to write to -->
 	<targets async="true">
 		<!-- write logs to file 大小1m 1048576 -->
-		<target xsi:type="File" name="allfile" fileName="data\log\${shortdate}-${level}.log"
+		<target xsi:type="File" name="allfile" fileName="/data/log/${shortdate}-${level}.log"
 			archiveAboveSize="1048576"
 				layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${aspnet-mvc-controller}/${aspnet-mvc-action}|${message} ${exception:format=tostring}" />
 
